@@ -1,4 +1,4 @@
-# $NetBSD: pbulk.conf,v 1.17 2010/02/24 22:51:37 joerg Exp $
+# $NetBSD: pbulk.conf,v 1.18 2012/11/23 12:13:34 joerg Exp $
 
 # Version of the configuration file. This is bumped whenver the default
 # config changes to notify the administrator about updates.
@@ -9,6 +9,9 @@ config_version=@PBULK_CONFIG_VERSION@
 # used in the .txt version of the report.
 #
 base_url=http://www.pkgsrc-box.org/reports/current/DragonFly-1.8
+
+# If yes, keep the last scan results in ${bulklog}.orig and try to reuse them.
+reuse_scan_results=no
 
 # The pbulk framework can use multiple machines to build the packages.
 # On a single-processor, non-distributed build, you may want to say "no"
